{
  "version": 4,
  "terraform_version": "1.0.9",
  "serial": 121,
  "lineage": "c9b2298d-73fe-9c12-2981-c274f2b446fa",
  "resources": [
    {
      "module": "module.aws_vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "elastic_ip",
      "provider": "module.aws_vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0418cbc1970d47230",
            "domain": "vpc",
            "id": "eipalloc-0418cbc1970d47230",
            "network_border_group": "us-east-2",
            "public_dns": "ec2-18-217-236-89.us-east-2.compute.amazonaws.com",
            "public_ip": "18.217.236.89",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "eip-0"
            },
            "tags_all": {
              "Name": "eip-0"
            },
            "vpc": true
          },
          "dependencies": [
            "module.aws_vpc.aws_internet_gateway.i_gateway",
            "module.aws_vpc.aws_vpc.custom_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e5ac6856e1752f1a",
            "domain": "vpc",
            "id": "eipalloc-0e5ac6856e1752f1a",
            "network_border_group": "us-east-2",
            "public_dns": "ec2-3-128-62-200.us-east-2.compute.amazonaws.com",
            "public_ip": "3.128.62.200",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "eip-1"
            },
            "tags_all": {
              "Name": "eip-1"
            },
            "vpc": true
          },
          "dependencies": [
            "module.aws_vpc.aws_internet_gateway.i_gateway",
            "module.aws_vpc.aws_vpc.custom_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "i_gateway",
      "provider": "module.aws_vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:848732354096:internet-gateway/igw-0693fde2bcba608b8",
            "id": "igw-0693fde2bcba608b8",
            "owner_id": "848732354096",
            "tags": {
              "Name": "i_gateway"
            },
            "tags_all": {
              "Name": "i_gateway"
            },
            "vpc_id": "vpc-05856f8be2c8b5589"
          },
          "dependencies": [
            "module.aws_vpc.aws_vpc.custom_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nats",
      "provider": "module.aws_vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0418cbc1970d47230",
            "association_id": "eipassoc-0e2f1aedc06d9e37e",
            "connectivity_type": "public",
            "id": "nat-0a6f8d6a9a20b2355",
            "network_interface_id": "eni-00f4859b953415c38",
            "private_ip": "10.0.1.204",
            "public_ip": "18.217.236.89",
            "subnet_id": "subnet-0351f76e91cc88931"
          },
          "dependencies": [
            "module.aws_vpc.aws_eip.elastic_ip",
            "module.aws_vpc.aws_internet_gateway.i_gateway",
            "module.aws_vpc.aws_subnet.public_subnets",
            "module.aws_vpc.aws_vpc.custom_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e5ac6856e1752f1a",
            "association_id": "eipassoc-04b2edae81e419b24",
            "connectivity_type": "public",
            "id": "nat-092e0d8f2ff714669",
            "network_interface_id": "eni-001906495d4d0209f",
            "private_ip": "10.0.2.240",
            "public_ip": "3.128.62.200",
            "subnet_id": "subnet-027187e3589cf6842"
          },
          "dependencies": [
            "module.aws_vpc.aws_eip.elastic_ip",
            "module.aws_vpc.aws_internet_gateway.i_gateway",
            "module.aws_vpc.aws_subnet.public_subnets",
            "module.aws_vpc.aws_vpc.custom_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_routes",
      "provider": "module.aws_vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0c1e4d5a85c48e2771080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0a6f8d6a9a20b2355",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0c1e4d5a85c48e277",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws_vpc.aws_eip.elastic_ip",
            "module.aws_vpc.aws_internet_gateway.i_gateway",
            "module.aws_vpc.aws_nat_gateway.nats",
            "module.aws_vpc.aws_route_table.private_tables",
            "module.aws_vpc.aws_subnet.public_subnets",
            "module.aws_vpc.aws_vpc.custom_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-01c851e57affd50591080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-092e0d8f2ff714669",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-01c851e57affd5059",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws_vpc.aws_eip.elastic_ip",
            "module.aws_vpc.aws_internet_gateway.i_gateway",
            "module.aws_vpc.aws_nat_gateway.nats",
            "module.aws_vpc.aws_route_table.private_tables",
            "module.aws_vpc.aws_subnet.public_subnets",
            "module.aws_vpc.aws_vpc.custom_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_routes",
      "provider": "module.aws_vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0693fde2bcba608b8",
            "id": "r-rtb-038e457dc8190bff01080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-038e457dc8190bff0",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws_vpc.aws_internet_gateway.i_gateway",
            "module.aws_vpc.aws_route_table.public_table",
            "module.aws_vpc.aws_vpc.custom_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_tables",
      "provider": "module.aws_vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:848732354096:route-table/rtb-0c1e4d5a85c48e277",
            "id": "rtb-0c1e4d5a85c48e277",
            "owner_id": "848732354096",
            "propagating_vgws": [],
            "route": [],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-05856f8be2c8b5589"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws_vpc.aws_vpc.custom_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:848732354096:route-table/rtb-01c851e57affd5059",
            "id": "rtb-01c851e57affd5059",
            "owner_id": "848732354096",
            "propagating_vgws": [],
            "route": [],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-05856f8be2c8b5589"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws_vpc.aws_vpc.custom_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_table",
      "provider": "module.aws_vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:848732354096:route-table/rtb-038e457dc8190bff0",
            "id": "rtb-038e457dc8190bff0",
            "owner_id": "848732354096",
            "propagating_vgws": [],
            "route": [],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-05856f8be2c8b5589"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws_vpc.aws_vpc.custom_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "assoc_private_routes",
      "provider": "module.aws_vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ebd22c44769c964c",
            "route_table_id": "rtb-0c1e4d5a85c48e277",
            "subnet_id": "subnet-07779d5611e8b58a7"
          },
          "dependencies": [
            "module.aws_vpc.aws_route_table.private_tables",
            "module.aws_vpc.aws_subnet.private_subnets",
            "module.aws_vpc.aws_vpc.custom_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-032d3e088901ac47d",
            "route_table_id": "rtb-01c851e57affd5059",
            "subnet_id": "subnet-092182f08e314613f"
          },
          "dependencies": [
            "module.aws_vpc.aws_route_table.private_tables",
            "module.aws_vpc.aws_subnet.private_subnets",
            "module.aws_vpc.aws_vpc.custom_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "assoc_public_routes",
      "provider": "module.aws_vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-066c7eeb88030af3e",
            "route_table_id": "rtb-038e457dc8190bff0",
            "subnet_id": "subnet-0351f76e91cc88931"
          },
          "dependencies": [
            "module.aws_vpc.aws_route_table.public_table",
            "module.aws_vpc.aws_subnet.public_subnets",
            "module.aws_vpc.aws_vpc.custom_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fa8834f58e19a126",
            "route_table_id": "rtb-038e457dc8190bff0",
            "subnet_id": "subnet-027187e3589cf6842"
          },
          "dependencies": [
            "module.aws_vpc.aws_route_table.public_table",
            "module.aws_vpc.aws_subnet.public_subnets",
            "module.aws_vpc.aws_vpc.custom_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sec_groups",
      "provider": "module.aws_vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "custom-security-group",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:848732354096:security-group/sg-0b78b86815b84ed35",
            "description": "Inbound \u0026 Outbound traffic for custom-security-group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b78b86815b84ed35",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "custom-security-group",
            "name_prefix": "",
            "owner_id": "848732354096",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-05856f8be2c8b5589"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws_vpc.aws_vpc.custom_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnets",
      "provider": "module.aws_vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:848732354096:subnet/subnet-07779d5611e8b58a7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07779d5611e8b58a7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "848732354096",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private_subnet-0"
            },
            "tags_all": {
              "Name": "private_subnet-0"
            },
            "vpc_id": "vpc-05856f8be2c8b5589"
          },
          "dependencies": [
            "module.aws_vpc.aws_vpc.custom_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:848732354096:subnet/subnet-092182f08e314613f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-092182f08e314613f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "848732354096",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private_subnet-1"
            },
            "tags_all": {
              "Name": "private_subnet-1"
            },
            "vpc_id": "vpc-05856f8be2c8b5589"
          },
          "dependencies": [
            "module.aws_vpc.aws_vpc.custom_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnets",
      "provider": "module.aws_vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:848732354096:subnet/subnet-0351f76e91cc88931",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0351f76e91cc88931",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "848732354096",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public_subnet-0"
            },
            "tags_all": {
              "Name": "public_subnet-0"
            },
            "vpc_id": "vpc-05856f8be2c8b5589"
          },
          "dependencies": [
            "module.aws_vpc.aws_vpc.custom_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:848732354096:subnet/subnet-027187e3589cf6842",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-027187e3589cf6842",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "848732354096",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public_subnet-1"
            },
            "tags_all": {
              "Name": "public_subnet-1"
            },
            "vpc_id": "vpc-05856f8be2c8b5589"
          },
          "dependencies": [
            "module.aws_vpc.aws_vpc.custom_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "custom_vpc",
      "provider": "module.aws_vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:848732354096:vpc/vpc-05856f8be2c8b5589",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-02634ae227be165a1",
            "default_route_table_id": "rtb-0f2bc3956c8d8c919",
            "default_security_group_id": "sg-011401fdf0fc6df00",
            "dhcp_options_id": "dopt-07536d78003ea4238",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-05856f8be2c8b5589",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0f2bc3956c8d8c919",
            "owner_id": "848732354096",
            "tags": {
              "Name": "custom-vpc"
            },
            "tags_all": {
              "Name": "custom-vpc"
            }
          }
        }
      ]
    }
  ]
}